# Easystroke-n7n

./: .gitignore  CMakeLists.txt  README.md  actiondb.cc  actions.cc  cellrenderertextish.vala  composite.cc  easystroke.desktop  gesture.cc  gesture.h  grabber.cc  handler.cc  json.h  main.cc  main.cc.orig  main.h  prefdb.cc  prefdb.h  prefdb.h.orig  prefs.cc  prefs.cc.orig  shape.cc  stats.cc  version.c
